--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,25 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.4.4
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  dots_indicator: ^3.0.0
+  facebook_auth: ^0.0.3
+  firebase_auth: ^5.3.1
+  firebase_core: ^3.6.0
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
+  flutter_bloc: ^8.1.6
+  flutter_facebook_auth: ^7.1.1
+  flutter_localizations:
+    sdk: flutter
   flutter_svg: ^2.0.10+1
+  get_it: ^8.0.0
+  google_sign_in: ^6.2.1
+  modal_progress_hud_nsn: ^0.5.1
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.1"
@@ -69,11 +83,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: 'Cairo'
+      fonts:
+        - asset: assets/fonts/Cairo-Regular.ttf
+        - asset: assets/fonts/Cairo-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Cairo-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Cairo-Bold.ttf
+          weight: 700
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
@@ -93,4 +112,6 @@ flutter_assets:
   assets_path: assets/images/
   output_path: lib/core/utils/
   filename: app_images.dart
-  field_prefix:
+  field_prefix: null
+flutter_intl:
+  enabled: true
