--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,16 +37,19 @@ dependencies:
   firebase_core: ^3.6.0
   flutter:
     sdk: flutter
-  flutter_animate: ^4.5.0
+  flutter_animate: ^4.5.2
   flutter_bloc: ^8.1.6
   flutter_facebook_auth: ^7.1.1
   flutter_localizations:
     sdk: flutter
+  flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
+  flutter_svg_provider: ^1.0.7
   get_it: ^8.0.0
   google_sign_in: ^6.2.1
   modal_progress_hud_nsn: ^0.5.1
   shared_preferences: ^2.3.2
+  skeletonizer: ^1.4.2
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.1"
@@ -73,6 +76,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/bold/
+    - assets/images/outlined/
+
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
